java 9+ tweaks